Add mp4 to README

--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -125,7 +125,7 @@
     "        .group_by(\"digit\").first()\n",
     "        .drop(\"index\")\n",
     "        .unpivot(index=[\"digit\"])\n",
-    "        .with_columns(pl.col(\"variable\").str.strip_prefix(\"pixel\").cast(pl.UInt16).alias(\"pixel\"))\n",
+    "        .with_columns(pixel=pl.col(\"variable\").str.strip_prefix(\"pixel\").cast(pl.UInt16))\n",
     "        .with_columns(x=(pl.col(\"pixel\")-1) % 28,\n",
     "                      y=27-(pl.col(\"pixel\")-1) // 28)\n",
     "        .drop(\"variable\", \"pixel\")\n",
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 160,
    "id": "f91ea519-bdbe-40ae-b091-4d65bef42375",
    "metadata": {},
    "outputs": [],
@@ -611,12 +611,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8aa62039-9956-4d8b-9b7f-fc61c3c55dba",
+   "cell_type": "markdown",
+   "id": "f28dd2c2-e9cd-4863-9b83-1cb06a97cfea",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "https://github.com/jeroenjanssens/umap-animated/assets/1368256/3a967d88-02e7-4085-ae49-b85fe154b442"
+   ]
   }
  ],
  "metadata": {
