--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -5,8 +5,32 @@
    "id": "5ff7cd71-21d1-420c-b5ee-7a2adfa8cfa4",
    "metadata": {},
    "source": [
-    "# UMAP Animated"
+    "# Dimensionality Reduction, Animated\n",
+    "\n",
+    "<img align=\"right\" width=\"400\" height=\"400\" src=\"images/intro.png\">\n",
+    "\n",
+    "Understanding your data is key in any data science project.\n",
+    "Visualization is useful for this, but can be challenging when the data has a high dimensionality.\n",
+    "This includes complex data such as text, images, and sensor measurements.\n",
+    "You could create a scatter plot matrix, but this can only show how any two features interact and fails to capture structure across many dimensions.\n",
+    "\n",
+    "There’s an entire subfield within machine learning concerned with exactly this challenge: dimensionality reduction.\n",
+    "Dimensionality reduction algorithms can help you gain insight into your high-dimensional data and reveal whether there’s any structure.\n",
+    "The current state-of-the-art dimensionality reduction algorithm is UMAP, which stands for Uniform Manifold Approximation and Projection for Dimension Reduction. \n",
+    "\n",
+    "In this post we're going to apply UMAP to the MNIST dataset, a collection of 70,000 handwritten digits. Each digit is an image of 28 by 28 grayscale pixels, making the dimensionality of the dataset 784. UMAP will embed this dataset into two dimensions, allowing us to understand its structure.\n",
+    "\n",
+    "To be honest, the MNIST dataset is already used way too often in machine learning demos, including those about UMAP.\n",
+    "What's done less often, is look at how UMAP creates an embedding."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8dc05cd-3cb4-445b-9137-80f6644860d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -389,12 +413,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 173,
    "id": "8e90552f-e456-497f-8560-88642ae7b8c4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_embedding(df_, epoch, max_epochs, legend=True):\n",
+    "def plot_embedding(df_, epoch, max_epochs, legend=True, dpi=100):\n",
     "    df_ = (df_.filter(pl.col(\"epoch\") == epoch))\n",
     "    \n",
     "    frame = (\n",
@@ -410,14 +434,15 @@
     "              subtitle=\"Each point is a handwritten digit\")\n",
     "        + theme_void(base_size=16, base_family=\"Futura\")\n",
     "        + theme(\n",
-    "           text=element_text(color=\"white\"),\n",
-    "           plot_title=element_text(ha=\"left\"),\n",
-    "           plot_caption=element_text(ha=\"left\"),\n",
-    "           axis_title=element_blank(),\n",
-    "           axis_text=element_blank(),\n",
-    "           plot_margin=0.05,\n",
-    "           plot_background=element_rect(fill=\"black\"),\n",
-    "           figure_size=(8, 8)\n",
+    "            text=element_text(color=\"white\"),\n",
+    "            plot_title=element_text(ha=\"left\"),\n",
+    "            plot_caption=element_text(ha=\"left\"),\n",
+    "            axis_title=element_blank(),\n",
+    "            axis_text=element_blank(),\n",
+    "            plot_margin=0.05,\n",
+    "            plot_background=element_rect(fill=\"black\"),\n",
+    "            figure_size=(8, 8),\n",
+    "            dpi=dpi\n",
     "        )\n",
     "    )\n",
     "\n",
@@ -430,6 +455,16 @@
     "    else:\n",
     "         frame += theme(legend_position=\"none\")\n",
     "    return frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "e10266c2-c9d1-47e9-9148-63c04be431de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_embedding(df_epochs, num_epochs-1, num_epochs, legend=True, dpi=50).save(\"images/intro.png\", verbose=False)"
    ]
   },
   {
@@ -643,7 +678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
