Move code to combine plot into separate function

--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -21,16 +21,17 @@
     "In this post we're going to apply UMAP to the MNIST dataset, a collection of 70,000 handwritten digits. Each digit is an image of 28 by 28 grayscale pixels, making the dimensionality of the dataset 784. UMAP will embed this dataset into two dimensions, allowing us to understand its structure.\n",
     "\n",
     "To be honest, the MNIST dataset is already used way too often in machine learning demos, including those about UMAP.\n",
-    "What's done less often, is look at how UMAP creates an embedding."
+    "What's done less often, is look at _how_ UMAP creates an embedding, by visualizing the intermediate results at every step (also known as an epoch).\n",
+    "\n",
+    "## Result\n",
+    "\n",
+    "The result of this notebook is an animation where each frame is an epoch.\n",
+    "On the right are random samples of each digit.\n",
+    "This gives us an idea of how all the variations look like.\n",
+    "Plus, it serves as a legend. \n",
+    "\n",
+    "https://github.com/jeroenjanssens/umap-animated/assets/1368256/cc7aa083-20db-4fe7-9647-98992676ab3c"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8dc05cd-3cb4-445b-9137-80f6644860d0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -40,28 +41,9 @@
    "outputs": [],
    "source": [
     "from plotnine import *\n",
-    "import polars as pl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "37cf4507-2151-415e-afc4-6a8dec7d3277",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "polars.config.Config"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pl.Config.set_tbl_cols(10)"
+    "import polars as pl\n",
+    "\n",
+    "pl.Config.set_tbl_cols(10);"
    ]
   },
   {
@@ -74,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "e64016c2-163f-4e03-860c-479dc1b3d9b9",
    "metadata": {},
    "outputs": [
@@ -112,7 +94,7 @@
        "└────────┴────────┴────────┴────────┴────────┴───┴──────────┴──────────┴─────────┴─────────┴───────┘"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "id": "b673f9ad-3399-4eeb-b8a0-0fc49067a59b",
    "metadata": {},
    "outputs": [],
@@ -158,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "id": "c48543c9-c1d9-4fd6-bd7d-8e91b3c874a5",
    "metadata": {},
    "outputs": [
@@ -195,7 +177,7 @@
        "└───────┴───────┴─────┴─────┘"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "936dd8e3-be7f-48b0-a156-555efe3df30b",
    "metadata": {},
    "outputs": [
@@ -273,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "id": "e3141b82-aad7-46cd-9425-e689d1792855",
    "metadata": {},
    "outputs": [],
@@ -299,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "id": "f37a2955-07c6-4b1c-879d-91aaf54bd8a7",
    "metadata": {},
    "outputs": [
@@ -322,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "id": "2ca6e5d6-a90b-448b-8bb3-aac84df968f0",
    "metadata": {},
    "outputs": [
@@ -353,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 9,
    "id": "92c502b4-ef4d-41e4-9287-416fa3eec624",
    "metadata": {},
    "outputs": [
@@ -390,7 +372,7 @@
        "└───────┴──────────┴──────────┴───────┴───────┘"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 10,
    "id": "ced19b9e-6e00-446d-8ccf-1581ccc360b5",
    "metadata": {},
    "outputs": [],
@@ -413,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 11,
    "id": "8e90552f-e456-497f-8560-88642ae7b8c4",
    "metadata": {},
    "outputs": [],
@@ -425,13 +407,13 @@
     "        ggplot(df_, aes(\"x\", \"y\", color=\"digit\"))\n",
     "        + geom_point(size=0.04, alpha=1)\n",
     "        + annotate(\"segment\", x=0, y=1.05, xend=epoch/max_epochs, yend=1.05, \n",
-    "                  color=\"white\", size=1)\n",
+    "                   color=\"white\", size=1)\n",
     "        + guides(colour=guide_legend(override_aes={\"size\": 5, \"alpha\": 1}))\n",
     "        + scale_color_brewer(type=\"qual\", palette=3)\n",
     "        + scale_x_continuous(limits=(0, 1), expand=(0, 0.001, 0, 0.001))\n",
     "        + scale_y_continuous(limits=(0, 1.06), expand=(0, 0.01, 0, 0.01))\n",
     "        + labs(title=\"MNIST data embedded into two dimensions by UMAP\",\n",
-    "              subtitle=\"Each point is a handwritten digit\")\n",
+    "               subtitle=\"Each point is a handwritten digit\")\n",
     "        + theme_void(base_size=16, base_family=\"Futura\")\n",
     "        + theme(\n",
     "            text=element_text(color=\"white\"),\n",
@@ -459,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 12,
    "id": "e10266c2-c9d1-47e9-9148-63c04be431de",
    "metadata": {},
    "outputs": [],
@@ -469,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 13,
    "id": "aa98e445-faf7-4f86-a083-60fb4eca0f7a",
    "metadata": {},
    "outputs": [
@@ -492,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 14,
    "id": "adf35d5f-2b47-4ca2-bb55-d3912d13c509",
    "metadata": {},
    "outputs": [
@@ -515,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 15,
    "id": "18807d48-8fbf-4a22-817e-db93899c5a0c",
    "metadata": {},
    "outputs": [
@@ -541,48 +523,30 @@
    "id": "ed06bf00-81c3-44f8-91e7-72d2ad230422",
    "metadata": {},
    "source": [
-    "## Combine into one picture"
+    "## Combine the embedding and the legend into one picture"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "id": "e31fb1f4-71e5-440c-a669-bf370020146b",
+   "execution_count": 16,
+   "id": "bf53f2a1-d87d-4d84-b6cb-d77513142612",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_embedding(df_epochs, num_epochs-1, num_epochs, legend=False).save(\"images/embedding.png\", verbose=False)\n",
-    "plot_digits(get_pixels(df_digits, seed=42), height=8).save(\"images/legend.png\", verbose=False)"
+    "from util import combine_plots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "id": "60ca5146-f48d-40a6-a003-c168b1fb0e62",
+   "execution_count": 21,
+   "id": "f3fd91f3-6fd7-459d-bf60-7b4f9dd527e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PIL import Image\n",
-    "\n",
-    "# Open the images\n",
-    "embedding_img = Image.open(\"images/embedding.png\")\n",
-    "legend_img = Image.open(\"images/legend.png\")\n",
-    "\n",
-    "# Get the dimensions of the images\n",
-    "embedding_width, embedding_height = embedding_img.size\n",
-    "legend_width, legend_height = legend_img.size\n",
-    "\n",
-    "# Create a new image with the combined width and the maximum height of the two images\n",
-    "combined_width = embedding_width + legend_width\n",
-    "combined_height = max(embedding_height, legend_height)\n",
-    "combined_img = Image.new(\"RGB\", (combined_width, combined_height))\n",
-    "\n",
-    "# Paste the images into the new image\n",
-    "combined_img.paste(embedding_img, (0, 0))\n",
-    "combined_img.paste(legend_img, (embedding_width, 0))\n",
-    "\n",
-    "# Save the combined image\n",
-    "combined_img.save(\"images/combined.png\")"
+    "combine_plots([\n",
+    "    plot_embedding(df_epochs, num_epochs-1, num_epochs, legend=False),\n",
+    "    plot_digits(get_pixels(df_digits, seed=42), height=8)\n",
+    "], \"images/combined.png\", orientation=\"horizontal\")"
    ]
   },
   {
@@ -605,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 24,
    "id": "49124af2-ed21-438a-a7ed-b04d5b036993",
    "metadata": {},
    "outputs": [
@@ -620,22 +584,22 @@
    "source": [
     "for i in range(num_epochs):\n",
     "    print(f\"Frame {i}/{num_epochs-1}\", end=\"\\r\")\n",
-    "    plot_embedding(df_epochs, i, num_epochs, legend=False).save(f\"frames/embedding-{i:06}.png\", verbose=False)\n",
-    "    plot_digits(get_pixels(df_digits), height=8).save(f\"frames/legend-{i:06}.png\", verbose=False)"
+    "    combine_plots([\n",
+    "        plot_embedding(df_epochs, i, num_epochs, legend=False),\n",
+    "        plot_digits(get_pixels(df_digits), height=8)\n",
+    "    ], f\"frames/combined-{i:06}.png\", orientation=\"horizontal\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "id": "f91ea519-bdbe-40ae-b091-4d65bef42375",
+   "execution_count": 26,
+   "id": "df043e42-233b-4a1b-8e11-0319359bb4ab",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "ffmpeg \\\n",
-    "  -i frames/embedding-%06d.png \\\n",
-    "  -i frames/legend-%06d.png \\\n",
-    "  -filter_complex \"[0:v][1:v]hstack=inputs=2\" \\\n",
+    "  -i frames/combined-%06d.png \\\n",
     "  -framerate 30 \\\n",
     "  -pix_fmt yuv420p \\\n",
     "  -vcodec libx264 \\\n",
@@ -656,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df043e42-233b-4a1b-8e11-0319359bb4ab",
+   "id": "0a276799-5374-46ed-b7ce-74fb2c047ee7",
    "metadata": {},
    "outputs": [],
    "source": []
