--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -35,13 +35,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
+   "id": "0c37ebbf-5cd1-4c1c-9f99-e1f42555e17a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video alt=\"test\" controls>\n",
+       "    <source src=\"movies/umap.mp4\" type=\"video/mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%HTML\n",
+    "<video alt=\"test\" controls>\n",
+    "    <source src=\"movies/umap.mp4\" type=\"video/mp4\">\n",
+    "</video>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e775d0eb-7b57-4e48-a4f4-fadef3d73446",
+   "metadata": {},
+   "source": [
+    "## Applying UMAP\n",
+    "\n",
+    "The notebook _prepare.ipynb_ prepares the data necessary to generate the visualizations and animations.\n",
+    "It creates two files: _data/digits.parquet_ and _data/epochs.parquet_.\n",
+    "Because these two files are already present in the repository, you don't necessarily need to run this notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "1bc9c990-d1cc-475a-a183-80b7c9546742",
    "metadata": {},
    "outputs": [],
    "source": [
     "from plotnine import *\n",
     "import polars as pl\n",
+    "\n",
+    "from util import combine_plots\n",
     "\n",
     "pl.Config.set_tbl_cols(10);"
    ]
@@ -51,7 +93,12 @@
    "id": "77702051-e735-40ed-9814-50656c48ae3e",
    "metadata": {},
    "source": [
-    "## Understanding handwritten digits as high-dimensional vectors"
+    "## Understanding handwritten digits as high-dimensional vectors\n",
+    "\n",
+    "Machine learning algorithms, such as UMAP, assume that each row is a data point.\n",
+    "That means that one hand-written digit is a row of 784 values, in other words, a high-dimensional vector.\n",
+    "The values, by the way, vary from 0 to 255 to represent the amount of ink.\n",
+    "Here's a portion of the very wide DataFrame `df_digits`."
    ]
   },
   {
@@ -106,10 +153,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c3932681-d202-4551-9494-c633789cdda6",
+   "metadata": {},
+   "source": [
+    "Our goal is to reduce the dimensionality from 784 to 2, so that we can create a scatter plot."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "be34652e-842b-464f-8040-7a26db3a7478",
    "metadata": {},
    "source": [
-    "## Plot digits"
+    "## Plot digits\n",
+    "\n",
+    "To better understanding what the handwritten digits actually look like, we can visualize them using Plotnine.\n",
+    "For this, we need to wrangle a wide row into a long DataFrame of `x` and `y` values."
    ]
   },
   {
@@ -136,6 +194,14 @@
     "                      y=27-(pl.col(\"pixel\")-1) // 28)\n",
     "        .drop(\"variable\", \"pixel\")\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac7341b6-c26e-4251-bb1a-f9096d734bb7",
+   "metadata": {},
+   "source": [
+    "Here's what the result looks like for a hand-written \"7\":"
    ]
   },
   {
@@ -185,6 +251,14 @@
    "source": [
     "df_pixels = get_pixels(df_digits, seed=42)\n",
     "df_pixels.filter(pl.col(\"digit\") == \"7\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c002cf9-7ac0-4a2a-ba5f-d60ba163d32a",
+   "metadata": {},
+   "source": [
+    "If we make this long DataFrame square, and squint our eyes, we can actually see a \"7\":"
    ]
   },
   {
@@ -251,6 +325,16 @@
    "source": [
     "with pl.Config(tbl_rows=30, tbl_cols=30):\n",
     "    display(df_pixels.filter(pl.col(\"digit\") == \"7\").pivot(\"x\", values=\"value\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8749025d-2a26-4355-aaeb-e056f7efa14d",
+   "metadata": {},
+   "source": [
+    "However, we have Plotnine at our disposal, so let's use that instead.\n",
+    "The following function uses the `geom_tile()` and `facet_wrap()` functions.\n",
+    "We're going to use it to create a legend of all 10 digits."
    ]
   },
   {
@@ -334,6 +418,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eab2596f-c650-4e35-8191-f0fca890167a",
+   "metadata": {},
+   "source": [
+    "To plot an embedding, we're going to read the Parquet file _data/epochs.parquet_ into a DataFrame called `df_epochs`.\n",
+    "This is a very long DataFrame containing the `x` and `y` position of each digit at every epoch."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "92c502b4-ef4d-41e4-9287-416fa3eec624",
@@ -383,14 +476,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a4123bdb-8687-4b0c-83f7-e642c11b7b87",
+   "metadata": {},
+   "source": [
+    "From the 60,000 available digits, we use 30,000 of them.\n",
+    "We let UMAP optimize for 200 epochs.\n",
+    "This is to keep the final animation below 10MB so that GitHub can include it in the README."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "ced19b9e-6e00-446d-8ccf-1581ccc360b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_epochs = df_epochs.select(pl.col(\"epoch\").max()).item() + 1\n",
-    "num_digits = df_epochs.select(pl.col(\"index\").max()).item() + 1"
+    "num_digits = df_epochs.select(pl.col(\"index\").max()).item() + 1\n",
+    "num_epochs = df_epochs.select(pl.col(\"epoch\").max()).item() + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66b18c1c-baf0-44ca-82cf-357aa7d1af34",
+   "metadata": {},
+   "source": [
+    "The following function creates a scatter plot using the `geom_point()` function.\n",
+    "The `max_epoch` argument is used to add a progress bar (using the `annotate()` function) underneath the title.\n",
+    "The majority of the code is responsible for styling the plot.\n",
+    "The `legend` argument is set to `False` when we combine the scatter plot with the visualizations of the digits show above.\n",
+    "The `dpi` argument is only used to create the small image at the beginning of this notebook."
    ]
   },
   {
@@ -441,18 +556,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "e10266c2-c9d1-47e9-9148-63c04be431de",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a small image to add to the beginning of this notebook\n",
     "plot_embedding(df_epochs, num_epochs-1, num_epochs, legend=True, dpi=50).save(\"images/intro.png\", verbose=False)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d289509c-8256-441b-ab92-eef8181e6b2d",
+   "metadata": {},
+   "source": [
+    "### Initial embedding\n",
+    "\n",
+    "UMAP begins by constructing a weighted k-nearest neighbor graph from the high-dimensional data. It then performs spectral embedding, which involves computing the eigenvectors of the graph Laplacian. This step provides an initial low-dimensional representation of the data."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "aa98e445-faf7-4f86-a083-60fb4eca0f7a",
+   "execution_count": 32,
+   "id": "622b4bcf-7435-4268-a15a-092bc07366e9",
    "metadata": {},
    "outputs": [
     {
@@ -470,6 +596,22 @@
    ],
    "source": [
     "plot_embedding(df_epochs, 0, num_epochs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd896e6d-9904-4c92-9b22-a50180b35ca5",
+   "metadata": {},
+   "source": [
+    "### Intermediate embeddings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d8e6f07-1696-40eb-a9b1-81078f0b11fd",
+   "metadata": {},
+   "source": [
+    "After the spectral embedding, UMAP refines the embedding using a non-linear optimization technique. It minimizes a cross-entropy loss function that aligns the high-dimensional data structure with the low-dimensional representation. This optimization is done using stochastic gradient descent."
    ]
   },
   {
@@ -493,6 +635,16 @@
    ],
    "source": [
     "plot_embedding(df_epochs, num_epochs//4, num_epochs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60af6068-abbe-4540-b1c0-2aa0e9b92532",
+   "metadata": {},
+   "source": [
+    "### Final embedding\n",
+    "\n",
+    "As the optimization progresses, the algorithm approaches a local minimum of the loss function. The gradients of the loss function become smaller, leading to smaller updates to the embeddings. This is a natural part of gradient-based optimization processes, where convergence typically slows as the solution nears the optimum."
    ]
   },
   {
@@ -523,17 +675,9 @@
    "id": "ed06bf00-81c3-44f8-91e7-72d2ad230422",
    "metadata": {},
    "source": [
-    "## Combine the embedding and the legend into one picture"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "bf53f2a1-d87d-4d84-b6cb-d77513142612",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from util import combine_plots"
+    "## Combine the embedding and the legend into one picture\n",
+    "\n",
+    "We use the function `combine_plots()` from _utils.py_ to put the embedding and the legend next to each other."
    ]
   },
   {
@@ -564,26 +708,38 @@
    "source": [
     "## Animate\n",
     "\n",
-    "Need `ffmpeg`"
+    "To create the animation, we first generate all the frames as individual PNG files.\n",
+    "We then use `ffmpeg` to stitch the 200 PNG files into an MP4 movie.\n",
+    "(Plotnine offers a [PlotnineAnimation](https://plotnine.org/reference/PlotnineAnimation.html) class to animate ggplot objects, but it currently [has some issues](https://github.com/has2k1/plotnine/issues/816).)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "id": "49124af2-ed21-438a-a7ed-b04d5b036993",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Frame 199/199\r"
+      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x1058a59a0>>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/jeroen/Library/Caches/pypoetry/virtualenvs/non-package-mode-ZsQjsKQj-py3.12/lib/python3.12/site-packages/ipykernel/ipkernel.py\", line 775, in _clean_thread_parent_frames\n",
+      "    def _clean_thread_parent_frames(\n",
+      "\n",
+      "KeyboardInterrupt: \n",
+      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x1058a59a0>>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/jeroen/Library/Caches/pypoetry/virtualenvs/non-package-mode-ZsQjsKQj-py3.12/lib/python3.12/site-packages/ipykernel/ipkernel.py\", line 775, in _clean_thread_parent_frames\n",
+      "    def _clean_thread_parent_frames(\n",
+      "\n",
+      "KeyboardInterrupt: \n"
      ]
     }
    ],
    "source": [
     "for i in range(num_epochs):\n",
-    "    print(f\"Frame {i}/{num_epochs-1}\", end=\"\\r\")\n",
     "    combine_plots([\n",
     "        plot_embedding(df_epochs, i, num_epochs, legend=False),\n",
     "        plot_digits(get_pixels(df_digits), height=8)\n",
@@ -611,19 +767,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c5e3ae95-6818-4c69-9faa-74b859ba5da9",
+   "metadata": {},
+   "source": [
+    "## Final result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e9196d03-d6e6-45c3-a8ff-a89ee1535f1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video alt=\"test\" controls>\n",
+       "    <source src=\"movies/umap.mp4\" type=\"video/mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%HTML\n",
+    "<video alt=\"test\" controls>\n",
+    "    <source src=\"movies/umap.mp4\" type=\"video/mp4\">\n",
+    "</video>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f28dd2c2-e9cd-4863-9b83-1cb06a97cfea",
    "metadata": {},
    "source": [
     "https://github.com/jeroenjanssens/umap-animated/assets/1368256/cc7aa083-20db-4fe7-9647-98992676ab3c"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a276799-5374-46ed-b7ce-74fb2c047ee7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
