--- a/prepare.ipynb
+++ b/prepare.ipynb
@@ -37,6 +37,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bcba679b-fd7b-4de1-a823-30cfaf0a412d",
+   "metadata": {},
+   "source": [
+    "## Settings\n",
+    "\n",
+    "From the 60,000 available digits, we use 30,000 of them.\n",
+    "We let UMAP optimize for 200 epochs.\n",
+    "This is to keep the final animation below 10MB so that GitHub can include it in the README."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "d48c9256-63d1-4444-9e35-e2140ab0d2eb",
@@ -52,7 +64,10 @@
    "id": "0afdc057-f75f-463f-a881-2941baf9a9be",
    "metadata": {},
    "source": [
-    "## Save the MNIST dataset"
+    "## Save the MNIST dataset\n",
+    "\n",
+    "The Parquet file _data/digits.parquet_ is used for visualizing the digits themselves.\n",
+    "For example, to create a legend."
    ]
   },
   {
@@ -74,7 +89,10 @@
    "id": "14f8a2ca-ef2d-4eb5-aaa7-fb6c5ded1d3d",
    "metadata": {},
    "source": [
-    "## Apply UMAP"
+    "## Apply UMAP\n",
+    "\n",
+    "We apply a modified version of UMAP, that writes intermediate embeddings (2-D Numpy arrays) to disk.\n",
+    "Afterwards, these files are combined into one large Parquet file called _data/epochs.parquet_."
    ]
   },
   {
@@ -196,14 +214,6 @@
    "source": [
     "df_epochs.write_parquet(\"data/epochs.parquet\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3f4d1c3-fccd-43e6-8c16-06728fbb5b2b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -222,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
